@@ -16,6 +16,9 @@ Features added
 * #8107: autodoc: Add ``class-doc-from`` option to :rst:dir:`autoclass`
   directive to control the content of the specific class like
   :confval:`autoclass_content`
+* #8588: autodoc: :confval:`autodoc_type_aliases` now supports dotted name. It
+  allows you to define an alias for a class with module name like
+  ``foo.bar.BazClass``
 * #9129: html search: Show search summaries when html_copy_source = False
 * #9120: html theme: Eliminate prompt characters of code-block from copyable
   text
